# nelius

./: .gitignore  Cargo.toml  Makefile  README.md  package.json  pnpm-lock.yaml  turbo.json
.turbo/daemon/: 2af86fb1b26f71d4-turbo.log.2024-09-05  2af86fb1b26f71d4-turbo.log.2024-09-06
apps/docs/: README.md  package.json
apps/studio/: README.md  package.json  pnpm-lock.yaml
apps/studio/src/routes/: +layout.svelte  +page.svelte
apps/website/: README.md  package.json  tailwind.config.js
apps/website/src/routes/: +layout.svelte  +page.svelte
nelius/: Cargo.toml  go.mod  main.go
nelius/conf/: nelius.toml
nelius/src/: main.rs
nelius/src/query/: mod.rs
pkgs/assets/: README.md  package.json
pkgs/ui/: README.md  package.json
pkgs/ui/src/routes/: +layout.svelte  +page.svelte
studio/: main.go
