[workspace]
resolver = "2"
members = ["nelius"]


[workspace.package]
edition = "2021"
version = "0.0.1"
repository = "https://github.com/centlax/nelius"


[workspace.dependencies]
tokio = { version = "1.38.0", features = ["full"] }
toml = "0.8.19"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.1"
anyhow = "1.0.58"
